Fix errors reported by linter on tcl source files
Use Nagelfar comments to help linter to correctly understand dynamic
aspects of the code.

--- a/tcl/coll.tcl.in
+++ b/tcl/coll.tcl.in
@@ -29,6 +29,7 @@ proc getMovementBetweenList {from to {extfrom {}} {extto {}} {cmp eq}} {
    # determine what element to undo then do
    # to restore a target list from a current list
    # with preservation of the element order
+   ##nagelfar ignore #2 Badly formed if statement
    set imax [if {[llength $to] > [llength $from]} {llength $to} {llength\
       $from}]
    set list_equal 1
