--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -861,6 +861,7 @@ if {[catch {
    set ddelimarg 0
    # split first arg if multi-word string detected for compat with previous
    # doc on module usage with scripting language: module('load mod1 mod2')
+   ##nagelfar ignore #2 Badly formed if statement
    set argtoparse [if {[llength [lindex $argv 1]] > 1} {list {*}[split\
       [lindex $argv 1]] {*}[lrange $argv 2 end]} {lrange $argv 1 end}]
    foreach arg $argtoparse {
