--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -944,6 +944,7 @@ proc parseApplicationCriteriaArgs {aftbef nearsec args} {
       } elseif {[info exists nextargisdatetime]} {
          set ${nextargisdatetime}raw $arg
          # get epoch time from date time argument value
+         ##nagelfar ignore Unknown variable
          set $nextargisdatetime [parseDateTimeArg $prevarg $arg]
          unset nextargisdatetime
       } else {
@@ -2145,6 +2146,7 @@ proc execShAndGetEnv {shell script args} {
          foreach $comprevar [regexp -all -inline -lineanchor $compre [set\
             $out]] {
             if {[info exists valpart1]} {
+               ##nagelfar ignore Unknown variable
                set value [concat $valpart1 $valpart2]
             }
             # no specific escaping to convert for completes
@@ -2163,6 +2165,9 @@ proc sh-to-mod {args} {
 
    # evaluate script and retrieve environment before and after evaluation
    # procedure will set result variables in current context
+   ##nagelfar implicitvarcmd {execShAndGetEnv *} ignvarlist cwdbefout\
+      cwdaftout varbef varaft funcbef funcaft aliasbef aliasaft compbef\
+      compaft
    execShAndGetEnv {*}$args
 
    # check environment variable change
