--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1151,6 +1151,7 @@ proc formatObjectValToJson {objlist} {
          append disp "\"$val\""
       }
    }
+   ##nagelfar ignore Bad expression
    return [expr {[info exists disp] ? "{ $disp }" : "{}"}]
 }
 
@@ -1225,6 +1226,7 @@ proc reportModules {search_queries header hsgrkey hstyle show_mtime show_idx\
    set vr_list {}
 
    # treat elements in specified order if any
+   ##nagelfar ignore #2 Badly formed if statement
    foreach elt [if {[llength $mod_list_order] == 0} {array names mod_list}\
       {set mod_list_order}] {
       if {$report_variant} {
@@ -1474,9 +1476,11 @@ proc displayElementList {header sgrkey hstyle one_per_line display_idx\
             }
             set istart 0
          } else {
+            ##nagelfar ignore Unknown variable
             set istart [expr {$col * $cur_rows}]
             # only remove width of elements from current col
             for {set row 0} {$row < ($i % $cur_rows)} {incr row} {
+               ##nagelfar ignore Unknown variable
                incr row_width($row) -[expr {$pre_col_width + $elt_prefix_len}]
             }
          }
