--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -442,6 +442,8 @@ proc cmdModuleSwitch {uasked tag_list old {new {}}} {
       super-sticky]]} {
       lappendState reloading_supersticky $oldmod
    }
+   ##nagelfar implicitvarcmd {cmdModuleUnload swunload *} oldhidden olduasked\
+      oldmsgrecid deprelist depreisuasked deprevr depreextratag
    set ret [cmdModuleUnload swunload $unload_match 1 0 0 0 $old]
    if {$sticky_reload} {
       lpopState reloading_sticky
@@ -473,6 +475,7 @@ proc cmdModuleSwitch {uasked tag_list old {new {}}} {
          set undeprevr $deprevr
          set undepreextratag $depreextratag
       }
+      ##nagelfar implicitvarcmd {cmdModuleLoad swload *} newhidden newmsgrecid
       cmdModuleLoad swload $uasked 0 0 $tag_list $new
 
       # merge depre info of unload and load phases
