Fix warnings reported by linter on tcl source files

--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -541,6 +541,7 @@ proc renderSettings {} {
    }
 
    if {[array size g_delXResources] > 0} {
+      ##nagelfar ignore Found constant
       set xrdb [getCommandPath xrdb]
       set xres_to_del {}
       foreach var [array names g_delXResources] {
