--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -22,6 +22,7 @@
 
 # Runtime state properties (default value, proc to call to initialize state
 # value?)
+##nagelfar ignore +31 Found constant
 array set g_state_defs [list\
    autoinit {0}\
    clock_seconds {<undef> initStateClockSeconds}\
@@ -189,6 +190,7 @@ proc lappendState {state args} {
       set state [lindex $args 0]
       # retrieve current val through getState to initialize it if still undef
       set value [getState $state]
+      ##nagelfar ignore Found constant
       appendNoDupToList value {*}[lrange $args 1 end]
       setState $state $value
    } else {
@@ -318,6 +320,7 @@ proc unsetConf {option} {
 proc lappendConf {option args} {
    # retrieve current value through getConf to initialize it if still undef
    set value [getConf $option]
+   ##nagelfar ignore Found constant
    appendNoDupToList value {*}$args
    setConf $option $value
 }
@@ -337,6 +340,7 @@ proc sourceSiteConfig {} {
             append errMsg [formatErrStackTrace $::errorInfo $siteconfig {}]
             reportErrorAndExit $errMsg
          }
+         ##nagelfar ignore Found constant
          if {$siteconfig eq [getConf siteconfig]} {
             setState siteconfig_loaded 1
          } else {
@@ -345,6 +349,7 @@ proc sourceSiteConfig {} {
       }
       # check on extra_siteconfig after initial siteconfig loaded in case
       # it inhibits this extra load
+      ##nagelfar ignore Found constant
       if {$siteconfig eq [getConf siteconfig] && [getConf\
          extra_siteconfig] ne {}} {
          lappend siteconfiglist [getConf extra_siteconfig]
