--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -182,6 +182,7 @@ proc parseModuleCommandArgs {topcall cmd ignerr args} {
                # unload allowed not to raise error on unload/load mixed ml cmd
                if {$cmd in [list load try-load load-any switch unload]} {
                   if {$arg eq {--tag}} {
+                     ##nagelfar ignore Found constant
                      set nextargisvaltosplit tag_list
                   } else {
                      set tag_list [split [string range $arg 6 end] :]
@@ -842,6 +843,12 @@ if {[catch {
       rename ::__initStateClockSeconds ::initStateClockSeconds
       rename ::__parseDateTimeArg ::parseDateTimeArg
    }
+   ##nagelfar syntax readFile x x? x?
+   ##nagelfar syntax getFilesInDirectory x x
+   ##nagelfar syntax initStateUsergroups
+   ##nagelfar syntax initStateUsername
+   ##nagelfar syntax initStateClockSeconds
+   ##nagelfar syntax parseDateTimeArg x x
 
    # source site configuration script if any
    sourceSiteConfig
@@ -944,6 +951,7 @@ if {[catch {
                }
             }
             -w {
+               ##nagelfar ignore Found constant
                set nextargisval asked_term_width
                set  term_width_arg -w
             }
