--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -988,6 +988,7 @@ proc getPathToModule {mod {indir {}} {report_issue 1} {look_loaded no}\
          # loop to resolve correct modulefile in case specified mod is a
          # directory that should be analyzed to get default mod in it
          while {$prevmod ne $mod} {
+            ##nagelfar ignore Found constant
             set mod [getEqArrayKey mod_list $mod]
             set prevmod $mod
             if {[info exists mod_list($mod)]} {
@@ -1200,6 +1201,7 @@ proc getLoadedWithClosestName {name} {
       defineModStartNbProc $icase
       defineModEqProc $icase [getConf extended_default]
       # compare name to each currently loaded module name
+      ##nagelfar ignore Found constant
       foreach mod [getLoadedModulePropertyList name] {
          # if module loaded as fullpath but test name not, try to get loaded
          # mod short name (with currently used modulepaths) to compare it
@@ -1247,6 +1249,7 @@ proc getLoadedMatchingName {name {behavior {}} {loading 0} {lmlist {}}} {
       set getModuleFromLoadedModulefile getModuleFromLoadingModulefile
       set getLoadedModuleList [list getLoadingModuleList]
    } else {
+      ##nagelfar ignore #3 Found constant
       set isModulefileLoaded isModulefileLoaded
       set getModuleFromLoadedModulefile getModuleFromLoadedModulefile
       set getLoadedModuleList [list getLoadedModulePropertyList name]
@@ -2533,6 +2536,7 @@ proc getModules {dir {mod {}} {fetch_mtime 0} {search {}} {filter {}}} {
    foreach alias [array names g_moduleAlias] {
       if {($dir ne {} && [string first $dir/ $g_sourceAlias($alias)] == 0)\
          || ($add_rc_defs && [info exists g_rcAlias($alias)])} {
+         ##nagelfar ignore Found constant
          set found_list($alias) [list alias $g_moduleAlias($alias)]
       }
    }
