--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -872,6 +872,7 @@ proc getErrPrereqMsg {prelist {load 1}} {
       lassign [list {} missing [getHintLoFirstMsg $predesiglist]] un mis\
          hintmsg
    } else {
+      ##nagelfar ignore Found constant
       lassign [list un a [getHintUnFirstMsg $prelist]] un mis hintmsg
    }
    return "Module cannot be ${un}loaded due to $mis prereq.\n$hintmsg"
@@ -1315,6 +1316,7 @@ proc reportModules {search_queries header hsgrkey hstyle show_mtime show_idx\
    set len_list {}
    set max_len 0
    if {$json} {
+      ##nagelfar ignore Found constant
       upvar 0 clean_list display_list
       if {![info exists display_list]} {
          set display_list {}
