--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -64,6 +64,7 @@ array set g_state_defs [list\
 # value, is configuration lockable to default value, valid value list?,
 # internal value representation?, proc to call to initialize option value,
 # valid value list kind
+##nagelfar ignore #64 Too long line
 array set g_config_defs [list\
    contact {MODULECONTACT root@localhost 0}\
    auto_handling {MODULES_AUTO_HANDLING @autohandling@ 0 {0 1}}\
@@ -503,8 +504,10 @@ proc initConfColors {envvar value validvallist intvallist} {
    # background color kind (light or dark)
    if {![info exists colors_list]} {
       if {[getConf term_background] eq {light}} {
+         ##nagelfar ignore Too long line
          set colors_list {@lightbgcolors@}
       } else {
+         ##nagelfar ignore Too long line
          set colors_list {@darkbgcolors@}
       }
       if {[catch {
@@ -586,6 +589,7 @@ proc initConfTclExtLib {envvar value validvallist intvallist} {
    set libfile libtclenvmodules@SHLIB_SUFFIX@
 
    # determine lib directory
+   ##nagelfar ignore +13 Too long line
    @notmultilibsupport@set libdir {@libdir@}
    @multilibsupport@switch -- [getState machine] {
    @multilibsupport@   x86_64 - aarch64 - ppc64le - s390x {
