--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -604,7 +604,8 @@ proc module {command args} {
                         set priormodlist [lrange $modlist 0 $modidx]
                         if {[set unmod [getLoadedMatchingName $swlomod {} 0\
                            $priormodlist]] ne {}} {
-                           if {[cmdModuleUnload urequn match 1 0 1 1 $unmod]} {
+                           if {[cmdModuleUnload urequn match 1 0 1 1\
+                              $unmod]} {
                               reportWarning "Unload of useless requirement\
                                  [getModuleDesignation loaded $unmod] failed"\
                                  1
@@ -829,6 +830,7 @@ if {[catch {
    setState cmdline "$argv0 $argv"
 
    # Load extension library if enabled
+   ##nagelfar ignore +2 Too long line
    @libtclenvmodules@if {[file readable [getConf tcl_ext_lib]]} {
    @libtclenvmodules@   reportDebug "Load Tcl extension library ([getConf tcl_ext_lib])"
    @libtclenvmodules@   load [file normalize [getConf tcl_ext_lib]] Envmodules
