--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -99,6 +99,7 @@ proc initModfileModeAliases {mode auto aliasesVN aliasesPassArgVN\
       # list of alias commands whose target procedure is adapted according to
       # the evaluation mode
       set ::g_modfileEvalModes {load unload display help test whatis refresh}
+      ##nagelfar ignore #41 Too long line
       array set g_modfilePerModeAliases {
 add-property   {nop            nop            nop            nop            nop            nop            nop         }
 always-load    {always-load    nop            reportCmd      nop            nop            nop            nop         }
@@ -2714,7 +2715,7 @@ proc pushenv-un {var val} {
          set popval [string range [lindex $pushlist 0] $validx end]
 
          # restore top value if different from current one
-         # env array is used instead of get-env to know if env var is undefined
+         # env array is used instead of get-env to know if envvar is undefined
          if {![info exists ::env($var)] || $::env($var) ne $popval} {
             set-env $var $popval
          }
