--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -1436,7 +1436,8 @@ proc doesModuleConflict {mod} {
             if {![modEq $withmod $mod eqstart 1 2 1] && (!$isfullpath ||\
                ![modEq $withmod $smod eqstart 1 2 1]) && ([set lmmodlist\
                [getLoadedMatchingName $withmod returnall]] ne {} || [set\
-               lmmodlist [getLoadedMatchingName $withmod returnall 1]] ne {})} {
+               lmmodlist [getLoadedMatchingName $withmod returnall 1]] ne\
+               {})} {
                # multiple loaded module may match conflict declared name
                foreach lmmod $lmmodlist {
                   appendNoDupToList modconlist $lmmod
@@ -1460,7 +1461,8 @@ proc doesModuleConflict {mod} {
       }
    }
 
-   reportDebug "'$mod' conflicts with '$modconlist' (declared as '$moddecconlist')"
+   reportDebug "'$mod' conflicts with '$modconlist' (declared as\
+      '$moddecconlist')"
    return [list $does $modconlist $moddecconlist]
 }
 
