--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1773,6 +1773,7 @@ See 'module --help' to get available commands and options.}
 
 proc reportUsage {} {
    reportVersion
+   ##nagelfar ignore #100 Too long line
    report {Usage: module [options] [command] [args ...]
 
 Loading / Unloading commands:
